--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/foundry-era-contracts"]
 	path = lib/foundry-era-contracts
 	url = https://github.com/cyfrin/foundry-era-contracts
+[submodule "lib/foundry-devops"]
+	path = lib/foundry-devops
+	url = https://github.com/cyfrin/foundry-devops
