--- a/foundry.toml
+++ b/foundry.toml
@@ -5,5 +5,6 @@ libs = ["lib"]
 
 remapping = ["@openzeppelin/contracts=lib/openzeppelin-contracts/contracts"]
 is-system = true
---system-mode = true
+# --system-mode = true
+via-ir=true
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
